--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -29,10 +28,14 @@ jobs:
         with:
           name: vuepress-build
           path: docs/.vuepress/dist/
+      # This helps resolve an artifact deploy issue
+      # See : https://github.com/orgs/community/discussions/40771
       - name: Upload artifact for pages
         uses: actions/upload-pages-artifact@v1
         with: 
           path: docs/.vuepress/dist/
+  
+  deploy:
     # Add a dependency to the build job
     needs: build
     # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
