--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,8 @@ jobs:
           path: docs/.vuepress/dist/
   
   deploy:
-    # Limit to only the main branch
-    on: 
-      push:
-        branches: [main]
+    # Only run for the default branch
+    if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
     # Add a dependency to the build job
     needs: build
     # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
