--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-search": "^2.0.0-beta.62",
+    "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "@vuepress/plugin-markdown-math": "^2.0.0-rc.69",
+    "@vuepress/plugin-search": "^2.0.0-rc.69",
+    "@vuepress/theme-default": "^2.0.0-rc.69",
+    "mathjax-full": "^3.2.2",
+    "sass-embedded": "^1.83.1",
     "vuepress": "^2.0.0-beta.62"
   }
 }
