--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
     # Add a dependency to the build job
     needs: build
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+    # Set permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
       pages: write
       id-token: write
