--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,6 @@ jobs:
         with:
           name: github-pages
           path: docs/.vuepress/dist/
-  
   deploy:
     # Only run for the default branch
     if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
@@ -45,6 +44,18 @@ jobs:
     # Run the deploy steps
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
       - name: Deploy 🚀
         id: deployment
         uses: actions/deploy-pages@v4
