--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           name: github-pages
           path: docs/.vuepress/dist/
+
+      # This helps resolve an artifact deploy issue
+      # See : https://github.com/orgs/community/discussions/40771
+      - name: Upload artifact for pages
+        uses: actions/upload-pages-artifact@v1
+        with: 
+          path: docs/.vuepress/dist/
   deploy:
     # Only run for the default branch
     if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
