--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,20 +21,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - run: npm ci
       - run: npm run docs:build # Build VuePress dist files
       - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
+          # name: github-pages
           path: docs/.vuepress/dist/
 
-      # This helps resolve an artifact deploy issue
-      # See : https://github.com/orgs/community/discussions/40771
-      - name: Upload artifact for pages
-        uses: actions/upload-pages-artifact@v1
-        with: 
-          path: docs/.vuepress/dist/
+      
   deploy:
     # Only run for the default branch
     if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
@@ -51,8 +48,6 @@ jobs:
     # Run the deploy steps
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
       - name: Deploy 🚀
         id: deployment
         uses: actions/deploy-pages@v4
