--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,14 +21,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 22
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - run: npm ci
       - run: npm run docs:build # Build VuePress dist files
       - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: vuepress-build
+          # name: github-pages
           path: docs/.vuepress/dist/
-  
+
+      
   deploy:
     # Only run for the default branch
     if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
@@ -47,4 +50,4 @@ jobs:
     steps:
       - name: Deploy 🚀
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
